# tauri-egui-app

./: Cargo.toml  README.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
