[package]
name = "my-tauri-egui-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"

egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[workspace]
members = ["src-tauri"]
